k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: lab1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: lab1-backend:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: uploads-storage
              mountPath: /data/uploads
      volumes:
        - name: uploads-storage
          persistentVolumeClaim:
            claimName: backend-uploads-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: lab1
spec:
  selector:
    app: backend
  ports:
    - name: http
      port: 8081
      targetPort: 8081
